--- a/Win32Project1/Win32Project1.vcxproj
+++ b/Win32Project1/Win32Project1.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="Bird.cpp" />
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="Ground.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
@@ -167,6 +168,7 @@
     <ClInclude Include="Block.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="Global.h" />
+    <ClInclude Include="Ground.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="TitleScene.h" />
   </ItemGroup>
